--- a/networks5g/network-attachments-ovs.yaml
+++ b/networks5g/network-attachments-ovs.yaml
@@ -49,3 +49,20 @@ spec:
       }
     }'
 ---
+apiVersion: "k8s.cni.cncf.io/v1"
+kind: NetworkAttachmentDefinition
+metadata:
+  name: n6network
+  annotations:
+    k8s.v1.cni.cncf.io/resourceName: ovs-cni.network.kubevirt.io/n6br
+spec:
+  config: '{
+      "cniVersion": "0.3.1",
+      "type": "ovs",
+      "bridge": "n6br",
+      "mtu": 1450,
+      "ipam": {
+        "type": "static"
+      }
+    }'
+---
