--- a/open5gs/slices/slice2/smf2/kustomization.yaml
+++ b/open5gs/slices/slice2/smf2/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-- smf-deployment.yaml
-- smf-service.yaml
-- smf-configmap.yaml
+- oai-smf-deployment.yaml
+- oai-smf-service.yaml
+- oai-smf-configmap.yaml
