feat: one slice, 6 UEs

--- a/NWDAF/nwdaf-nbi-events/nbi-event-deployment.yaml
+++ b/NWDAF/nwdaf-nbi-events/nbi-event-deployment.yaml
@@ -32,12 +32,16 @@ spec:
             - name: ENGINE_UNEXPECTED_LARGE_RATE_FLOW_ROUTE
               value: /abnormal_behaviour/unexpected_large_rate_flow
             - name: ENGINE_DDOS_DETECTION
-              value: //abnormal_behaviour/suspicion_of_ddos_attack
+              value: /abnormal_behaviour/suspicion_of_ddos_attack
+            - name: ENGINE_BOT_DETECTION
+              value: /abnormal_behaviour/suspicion_of_ddos_attack
             - name: ENGINE_URI
               value: http://oai-nwdaf-engine:8080
             - name: ENGINE_ADS_URI
               value: http://oai-nwdaf-engine-ads:8080
             - name: ENGINE_DDOS_URI
               value: http://nwdaf-engine-ddos:8080
+            - name: ENGINE_BOT_URI
+              value: http://nwdaf-engine-bot-detection:8080
             - name: SERVER_ADDR
               value: 0.0.0.0:8080 
