--- a/ueransim/ueransim-ue/ue1/ue1.yaml
+++ b/ueransim/ueransim-ue/ue1/ue1.yaml
@@ -39,20 +39,20 @@ uacAcc:
 # Initial PDU sessions to be established
 sessions:
   - type: 'IPv4'
-    apn: 'internet'
+    apn: 'streaming'
     slice:
-      sst: 1
-      sd: 000001
+      sst: 2
+      sd: 000002
 
 # Configured NSSAI for this UE by HPLMN
 configured-nssai:
-  - sst: 1
-    sd: 000001
+  - sst: 2
+    sd: 000002
 
 # Default Configured NSSAI for this UE
 default-nssai:
-  - sst: 1
-    sd: 000001
+  - sst: 2
+    sd: 000002
 
 # Supported integrity algorithms by this UE
 integrity:
