--- a/ueransim/ueransim-ue/ue1/ue-deployment.yaml
+++ b/ueransim/ueransim-ue/ue1/ue-deployment.yaml
@@ -29,7 +29,7 @@ spec:
           value: gnb-service:4997
         command: ["sh", "-c", "until nc -z -u $DEPENDENCIES; do echo waiting for the gNB; sleep 2; done;"]
       containers:
-        - image: ghcr.io/niloysh/ueransim:v3.2.6
+        - image: ghcr.io/fatemeshafiee/ueransim:v3.2.6
           imagePullPolicy: Always
           name: ue
           securityContext:
