--- a/NWDAF/nwdaf-nbi-events/nbi-event-service.yaml
+++ b/NWDAF/nwdaf-nbi-events/nbi-event-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: oai-nwdaf-nbi-events
+  name: nwdaf-nbi-events
   namespace: open5gs
   labels:
-    app: oai-nwdaf-nbi-events
+    app: nwdaf-nbi-events
 spec:
   type: ClusterIP
   selector:
-    app: oai-nwdaf-nbi-events
+    app: nwdaf-nbi-events
   ports:
     - protocol: TCP
       port: 8080
