--- a/NWDAF/nwdaf-database/database-service.yaml
+++ b/NWDAF/nwdaf-database/database-service.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: oai-nwdaf-database
+  name: nwdaf-database
   namespace: open5gs
   labels:
-    app: oai-nwdaf-database
+    app: nwdaf-database
 spec:
   type: ClusterIP
   selector:
-    app: oai-nwdaf-database
+    app: nwdaf-database
   ports:
     - protocol: TCP
       port: 27017
       targetPort: 27017
+      # nodePort: 32000
