--- a/dockerfiles/open5gs/Dockerfile
+++ b/dockerfiles/open5gs/Dockerfile
@@ -16,14 +16,15 @@ RUN apt-get update \
     ninja-build build-essential flex bison git cmake \
     libsctp-dev libgnutls28-dev libgcrypt-dev libssl-dev \
     libidn11-dev libmongoc-dev libbson-dev libyaml-dev \
-    libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev \
-    libtins-dev libtalloc-dev meson
+    libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev libzmq5-dev libzmq5 \
+    libtins-dev libtalloc-dev meson pkg-config
+     
 RUN apt-get update && \
     apt-get install -y make nginx libjansson-dev gdb libcurl4-openssl-dev libcurl4-openssl-dev
 WORKDIR /open5gs
 
-RUN git clone -b main https://fatemeshafiee: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@github.com/fatemeshafiee/open5gs .  && \ 
-git checkout 9f561daa2b36486c9e709c4f6447bb134f49244b
+RUN git clone -b main https://fatemeshafiee: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@github.com/fatemeshafiee/open5gs .  && \ 
+git checkout edb8336a120db524d00f4f3581dfb80fc11a0728
 
 ENV CFLAGS="-Wno-error"
 ENV CXXFLAGS="-Wno-error"
@@ -40,7 +41,7 @@ RUN apt-get update \
     libsctp-dev libgnutls28-dev libgcrypt-dev libssl-dev \
     libidn11-dev libmongoc-dev libbson-dev libyaml-dev \
     libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev \
-    libtins-dev libtalloc-dev ca-certificates \
+    libtins-dev libtalloc-dev ca-certificates libzmq5-dev libzmq5 pkg-config\
     vim tcpdump iputils-ping iproute2 iptables gdb\
     && apt-get autoremove -y && apt-get autoclean
 
@@ -55,7 +56,8 @@ RUN tar -xzvf libmicrohttpd-1.0.1.tar.gz
 RUN (cd libmicrohttpd-1.0.1 && ./configure && make install)
 
 RUN apt-get install libjansson-dev  -y
-RUN apt-get install libcurl4-openssl-dev libcurl4-openssl-dev  -y
+RUN apt-get install libcurl4-openssl-dev libcurl4-openssl-dev libzmq5-dev libzmq5 pkg-config -y
+# RUN apt-get install -y --no-install-recommends libzmq5
 
 RUN mkdir -p /open5gs/install
 RUN update-ca-certificates
