--- a/NWDAF/nwdaf-sbi/sbi-deployment.yaml
+++ b/NWDAF/nwdaf-sbi/sbi-deployment.yaml
@@ -44,7 +44,7 @@ spec:
         - name: my-registry-secret
       containers:
         - name: nwdaf-sbi
-          image: fatemehshafieiardestani/oai-nwdaf-sbi:latest
+          image: fatemehshafieiardestani/oai-nwdaf-sbi:upf_5
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
