--- a/open5gs/slices/slice2/upf2/upf-configmap.yaml
+++ b/open5gs/slices/slice2/upf2/upf-configmap.yaml
@@ -40,6 +40,6 @@ data:
     iptables -t nat -A POSTROUTING -s 10.42.0.0/16 ! -o ogstun -j MASQUERADE;
     # tail -f /dev/null
     # exec gdb --args /open5gs/install/bin/open5gs-upfd -c /open5gs/config/upfcfg.yaml -d
-    /open5gs/install/bin/open5gs-upfd -c /open5gs/config/upfcfg.yaml -d
+    /open5gs/install/bin/open5gs-upfd -c /open5gs/config/upfcfg.yaml
 
 
